# jarvis-rs

./: .gitignore  .goreleaser.yml  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
.bkp.openhands/: pre-commit.sh
.bkp.openhands/microagents/: CLAUDE.md
.claude/: CLAUDE.md  settings.local.json
.claude/commands/: plan_with_gemini.md  plan_with_gemini.sh
.github/workflows/: ci.yml  release.yml
.openhands/: pre-commit.sh  setup.sh
.openhands/microagents/: repo.md  trigger_check.md  trigger_generate_prompt.md
cmd/jarvis/: main.go
internal/agent/: agent.go  agent_error_test.go  agent_test.go
internal/config/: config.go  config_test.go
internal/history/: history.go  message.go  message.obx.go  objectbox-model.go  objectbox-model.json
internal/llm/: interface.go  llm.go
internal/logger/: logger.go
pkg/llm/: llm.go
pkg/tools/: googlecalendar.go  homeassistant.go  homeassistant_client.go  homeassistant_list.go  manager.go  tool.go
src/: error.rs  lib.rs  main.rs  mcp_client.rs
src/agent/: executor.rs  fsm.rs  mod.rs
src/config/: mod.rs  types.rs
src/history/: mod.rs  storage.rs  types.rs
src/llm/: client.rs  mod.rs  types.rs
src/mcp/: client.rs  http.rs  mod.rs  sse.rs  stdio.rs
src/server/: handlers.rs  mod.rs  types.rs
tests/: agent_flows.rs  agent_fsm_tests.rs  agent_parity_tests.rs  agent_tool_mapping.rs  config_tests.rs  history_storage_tests.rs  llm_client_tests.rs  mcp_integration.rs  server_integration.rs  tool_routing_demo.rs
tests/common/: mocks.rs  mod.rs  test_utils.rs
